# FaceDetectorDemo

./: .gitignore  README.md  build.gradle  config.gradle  settings.gradle
facedetector/: CMakeLists.txt  build.gradle
facedetector/src/main/: AndroidManifest.xml
facedetector/src/main/cpp/: Android.mk  face_detector.cpp  face_detector.h  face_swap.cpp  face_swap.h  jdata_complier.cpp  jdata_complier.h
facedetector/src/main/cpp/dlib/: config.h.in
facedetector/src/main/java/com/video/facedetector/: AssetsUtil.java  FaceDetectorManager.java  FaceInfo.java
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/detector/sample/: FaceDemoActivity.java
sample/src/main/res/values/: strings.xml
sdk/: build.gradle
sdk/native/jni/include/opencv2/imgproc/: imgproc_c.h
